--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-handlebars": "^1.1.0",
+    "midifile": "^1.0.1",
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
     "pi-gpio": "0.0.6"
