--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.11.1",
     "express-handlebars": "^1.1.0",
     "midifile": "^1.0.1",
+    "mongoose": "^4.0.1",
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
     "pi-gpio": "0.0.6"
