--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^4.0.1",
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
-    "pi-gpio": "0.0.6"
+    "pi-gpio": "0.0.6",
+    "socket.io": "^1.3.5"
   },
   "bugs": {
     "url": "https://github.com/eguthrie/POECode_Official/issues"
