--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
     "body-parser": "^1.10.2",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
