--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
     "pi-gpio": "0.0.6",
+    "request": "^2.55.0",
     "socket.io": "^1.3.5"
   },
   "bugs": {
