--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-handlebars": "^1.1.0",
+    "midi-file-parser": "^1.0.0",
     "midifile": "^1.0.1",
     "mongoose": "^4.0.1",
     "morgan": "^1.5.1",
