--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.0.1",
     "morgan": "^1.5.1",
     "multer": "^0.1.8",
-    "pi-gpio": "0.0.6",
+    "pi-gpio": "0.0.8",
+    "pi-spi": "git+https://github.com/natevw/pi-spi.git",
     "request": "^2.55.0",
     "socket.io": "^1.3.5",
     "stylus": "^0.51.0"
